// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / BarScale Bar Scale As Risk Meter 1`] = `
.c0 {
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1px;
  margin-right: -1px;
}

.c2 > * {
  padding-left: 1px;
  padding-right: 1px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4 {
  height: 16px;
  background: #385E9D;
}

.c5 {
  height: 16px;
  background: #EBEBE8;
}

.c1 {
  width: 54px;
}

<div
  className="c0 c1"
>
  Risk
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c0 c4"
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c0 c4"
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c0 c4"
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c0 c4"
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c0 c5"
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c0 c5"
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c0 c5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / BarScale Bar Scale Normal 1`] = `
.c2 {
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c0 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3 {
  height: 12px;
  background: #385E9D;
}

.c4 {
  height: 12px;
  background: #EBEBE8;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2 c4"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules / BarScale Bar Scale With X Axis 1`] = `
Array [
  .c2 {
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c0 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3 {
  height: 12px;
  background: #385E9D;
}

.c4 {
  height: 12px;
  background: #EBEBE8;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c4"
      />
    </div>
  </div>,
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      Low
    </div>
    <div
      className="c1"
    >
      Medium
    </div>
    <div
      className="c1"
    >
      High
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / BarScale Double Bar Scale 1`] = `
Array [
  .c2 {
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c0 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3 {
  height: 12px;
  background: #385E9D;
}

.c4 {
  height: 12px;
  background: #EBEBE8;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c4"
      />
    </div>
  </div>,
  <h2>
    Max of 6
  </h2>,
  .c2 {
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c0 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3 {
  height: 12px;
  background: #385E9D;
}

.c4 {
  height: 12px;
  background: #EBEBE8;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c4"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c4"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c4"
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2 c4"
      />
    </div>
  </div>,
]
`;
